RESOLVED FIXED286747
Regression(289546@main) Introduced crashes on the bots
https://bugs.webkit.org/show_bug.cgi?id=286747
Summary Regression(289546@main) Introduced crashes on the bots
Chris Dumez
Reported 2025-01-30 08:04:23 PST
originalTokens was not captured early enough, as a result, when going back one item, we would sometimes try to access originalTokens[-1].
Attachments
Chris Dumez
Comment 1 2025-01-30 08:04:24 PST
Chris Dumez
Comment 2 2025-01-30 08:05:52 PST
EWS
Comment 3 2025-01-30 08:18:01 PST
Committed 289558@main (df8d07856ceb): <https://commits.webkit.org/289558@main> Reviewed commits have been landed. Closing PR #39763 and removing active labels.
Chris Dumez
Comment 4 2025-01-30 08:38:31 PST
*** Bug 286743 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 5 2025-01-30 10:55:57 PST
*** Bug 286745 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.