Regression(289546@main) Introduced crashes on the bots https://bugs.webkit.org/show_bug.cgi?id=286747 rdar://143882194

Reviewed by Alan Baradlay.

originalTokens was not captured early enough. As a result, when trying to
access 1 item back, we would sometimes try to access originalTokens[-1]
which would hit assertions in std::span.

* Source/WebCore/css/calc/CSSCalcTree+Parser.cpp:
(WebCore::CSSCalc::parseCalcSum):

Canonical link: https://commits.webkit.org/289558@main